# todo-manager

./: CMakeLists.txt  README.md
src/: Task.cpp  Task.h  TaskManager.cpp  TaskManager.h
tests/: CMakeLists.txt  TaskManager.Test.cpp
